Revision 60  by  abhishekdelta  on  2010-07-02 20:14:3
Description : Adding support for user-specified MySQL server
--------------------------------------------------------------------------------
Revision 59  by  abhishekdelta  on  2010-07-02 17:18:4
Description : Fixing a bug in email
--------------------------------------------------------------------------------
Revision 58  by  abhishekdelta  on  2010-07-02 04:30:4
Description : Undoing last commit
--------------------------------------------------------------------------------
Revision 57  by  chakradarraju  on  2010-07-01 11:46:5
Description : fixing permissions table: patch from mohnish
--------------------------------------------------------------------------------
Revision 56  by  chakradarraju  on  2010-06-30 00:10:5
Description : to learn svn commit
--------------------------------------------------------------------------------
Revision 55  by  abhishekdelta  on  2010-06-29 01:11:4
Description : Added Email Registrants in Admin
--------------------------------------------------------------------------------
Revision 54  by  abhishekdelta  on  2010-06-28 18:53:0
Description : Bugfixes in default emails
--------------------------------------------------------------------------------
Revision 53  by  abhishekdelta  on  2010-06-28 08:34:1
Description : fixed a bug in previous commit
--------------------------------------------------------------------------------
Revision 52  by  abhishekdelta  on  2010-06-28 08:31:1
Description : Removed Pragyan stuff from email templates
--------------------------------------------------------------------------------
Revision 51  by  abhishekdelta  on  2010-06-28 04:43:5
Description : Added site footer option and changed admin CSS
--------------------------------------------------------------------------------
Revision 50  by  abhishekdelta  on  2010-06-26 03:34:3
Description : Fixed problem with no_img.gif in PDF plugin